<resources>
    <string name="app_name">Taxidi</string>
    <string name="app_logo">Taxidi logo</string>
    <string name="just_a_truck">Just a truck</string>
    <string name="login">Login</string>
    <string name="welcome_to_taxidi">Welcome to Taxidi!</string>
    <string name="button_login_as_driver">Login as driver</string>
    <string name="button_login_as_company">Login as company</string>
    <string name="welcome_disclaimer">Test purposes only, while registering is real, any portrayals of real names, businesses, or otherwise are purely coincidental and hold no ties with any real entity.</string>
    <string name="geofence_entered">Geofence entered!</string>
    <string name="register_text">Register</string>
    <string name="login_to_existing">Login to existing account</string>
    <string name="example_email">truckdrivingman@yeehaw.com</string>
    <string name="email_address_text">Email Address:</string>
    <string name="password_text">Password:</string>
    <string name="example_password">********</string>
    <string name="register_new_account">Register a new account</string>
    <string name="password_text2">Password (Again):</string>
    <string name="register_text_next_step">Register, take me to the next step!</string>
    <string name="register_new_account_step_2">Register (Step 2)</string>
    <string name="register_step2_test_notification">Note: This is only a test app, your information you put here WILL be saved but is not important that it is real.</string>
    <string name="register_authority_type">Authority Type:</string>
    <string name="register_authority_type_1">My DOT</string>
    <string name="register_authority_type_2">My MC</string>
    <string name="register_authority_type_3">No DOT or MC</string>
    <string name="register_driver_type">Type:</string>
    <string name="register_driver_type_1">Intrastate</string>
    <string name="register_driver_type_2">Carrier dispatch</string>
    <string name="register_driver_type_3">Leased on</string>
    <string name="register_driver_type_4">Exempt</string>
    <string name="register_driver_type_5">Canadian</string>
    <string name="register_company_info_header">Company Information:</string>
    <string name="company_name_hint">Company Name*</string>
    <string name="street_address_hint">Street Address*</string>
    <string name="city_hint">City*</string>
    <string name="state_hint">State*</string>
    <string name="zip_code_hint">Zip Code*</string>
    <string name="company_phone_hint">Company Phone*</string>
    <string name="country_hint">Country*</string>
    <string name="register_personal_info_header">Personal Information:</string>
    <string name="personal_firstname_hint">First Name*</string>
    <string name="personal_lastname_hint">Last name*</string>
    <string name="personal_phone_hint">Personal Phone*</string>
    <string name="username_text">Username:</string>
    <string name="example_username">TruckDrivingMan</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="err_email_address">Email address not valid!</string>
    <string name="err_password_empty">Password field empty</string>
    <string name="err_password_not_match">Passwords do not match!</string>
    <string name="err_select_auth_type">Authority type not selected!</string>
    <string name="err_select_type">Type not selected!</string>
    <string name="err_enter_company_name">Company name not entered!</string>
    <string name="err_enter_street_address">Street address not entered!</string>
    <string name="err_enter_city">City not entered!</string>
    <string name="err_enter_state">State not entered!</string>
    <string name="err_enter_zip_code">Zip code not entered!</string>
    <string name="err_enter_country">Country not entered!</string>
    <string name="err_enter_company_phone">Company phone# not entered!</string>
    <string name="err_enter_firstname">First name not entered!</string>
    <string name="err_enter_lastname">Last name not entered!</string>
    <string name="err_enter_personal_phone">Personal phone# not entered!</string>
    <string name="err_username_empty">Username field empty</string>
    <string name="err_username_value_incorrect">Username must be between 4 and 20 characters!</string>
    <string name="err_password_invalid">Password must be at least 4 characters!</string>
    <string name="srverr_unknown">Unknown error!</string>
    <string name="srvsuc_register">User registered successfully</string>
    <string name="srvsuc_login">User logged in successfully</string>
    <string name="srverr_generic">An error occurred, please try again</string>
    <string name="srverr_invalid_pass">Please enter a valid password</string>
    <string name="srverr_invalid_email">Please enter a valid email address</string>
    <string name="srverr_invalid_username">Please enter a valid username</string>
    <string name="srverr_username_or_email_taken">Username or email already in use</string>
    <string name="srverr_ip_banned_lol">Internal Error #PI706</string>
    <string name="srverr_invalid_username2">Username invalid! Characters must be a–z, 0–9, \"_\", or \".\"</string>
    <string name="srverr_email_not_in_use">User for this email does not exist!</string>
    <string name="srverr_login_failure">Login error! Please make sure your credentials are correct.</string>
    <string name="srverr_profile_id">Couldn\'t get profile\'s ID!</string>
    <string name="bottom_navigation_home_title">Home</string>
    <string name="bottom_navigation_map_title">Map</string>
    <string name="bottom_navigation_notifications_title">Notifications</string>
    <string name="bottom_navigation_profile_title">Profile</string>
    <string name="driver_header_image_content_description">App logo, probably</string>
    <string name="driver_navigation_view_header_title">Taxidi</string>
    <string name="logout">Logout</string>
    <string name="messaging_text">Messages</string>
    <string name="driver_fragment_home_title">Home</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>
    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>
    <string name="date_util_suffix">ago</string>
    <string name="user_online">Online now</string>
    <string name="map_fragment_name">Load Map</string>
    <string name="contentdesc_user_active_image_indicator">User active image indicator</string>
    <string name="stats_view_title">Stats</string>
    <string name="current_card_title">Current:</string>
    <string name="num_shipped_text"># Shipped:</string>
    <string name="stat_card_verified_text">Verified:</string>
    <string name="no_data">No data</string>
    <string name="support">Support</string>
    <string name="others_text">Others</string>
    <string name="contact">Contact Us</string>
    <string name="title_about">About</string>
    <string name="read_all_text">Mark all as read</string>
    <string name="driver_fragment_notifications_title">Notifications</string>
    <string name="driver_fragment_profile_title">Profile</string>
    <string name="edit_my_profile_text">Edit Profile</string>
    <string name="srverr_load_profile">Error loading profile!</string>
    <string name="srvsuc_load_profile">Loaded profile successfully!</string>
    <string name="profile_description_example">Description description description description description description description description description description description description description description description description description description description description description description description description description description description description</string>
    <string name="send_message_button_text">Send Message</string>
    <string name="reviews_total_num_concat_text">Reviews</string>
    <string name="profile_background_photo_contdesc">Profile background photo</string>
    <string name="online_indicator_contdesc">Online indicator</string>
    <string name="not_verified_text">Not Verified</string>
    <string name="is_verified_text">Verified</string>
    <string name="shipments_total_num_concat_text">Shipments Sent</string>
    <string name="hire_button_text">Hire</string>
    <string name="srvsuc_load_notifications">Loaded notifications successfully!</string>
    <string name="srverr_load_notifications">Couldn\'t load notifications!</string>
    <string name="srverr_load_notifications_token"><![CDATA[Couldn\'t load notifications! -> 1014]]></string>
    <string name="srverr_load_notifications_lastid"><![CDATA[Couldn\'t load notifications! -> 1015]]></string>
    <string name="srverr_load_notifications_uid"><![CDATA[Couldn\'t load notifications! -> 1016]]></string>
    <string name="srverr_auth_token"><![CDATA[Server error! -> 1017]]></string>
    <string name="srverr_load_notifications_username"><![CDATA[Couldn\'t load notifications! -> 1018]]></string>
    <string name="srverr_notification_generic">Couldn\'t get notifications!</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location permission not granted!</string>
    <string name="current_location">Current Location</string>
    <string name="where_to">Where to?</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="request_pickup">Request Pickup</string>
    <string name="your_driver_is_arriving">Your driver is arriving</string>
    <string name="requesting_your_driver">Requesting your driver</string>
    <string name="your_pickup_is_booked">Your pickup is booked!</string>
    <string name="your_pickup_has_arrived">Your driver has arrived!</string>
    <string name="your_pickup_is_on_route_to_dest">Your pickup is on route to destination!</string>
    <string name="route_end">Your shipment has reached it\'s destination!</string>
    <string name="route_not_available_choose_different_locations">Route Not Available: Choose different pickup and drop location</string>
    <string name="load_type_text">Type:</string>
    <string name="load_weight_text">Load Weight:</string>
    <string name="trailer_type_text">Trailer Type:</string>
    <string name="trip_distance_text">Trip Distance:</string>
    <string name="pay_text">Pay:</string>
    <string name="placard_explosive">Explosive</string>
    <string name="placard_non_hazardous">Non-Hazardous</string>
    <string name="placard_flammable_gas">Flammable gas</string>
    <string name="placard_non_flam_non_tox_gas">Non-flammable Non-toxic Gas</string>
    <string name="contdesc_image_of_load_to_pick_up">Image of load to pick up</string>
    <string name="present_this_ticket_to_the_shipping_coordinator_text">Present this ticket to the shipping coordinator</string>
    <string name="finished_text">Finished</string>
</resources>