<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.lucidsoftworksllc.taxidi.auth.viewmodels.AuthSignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/auth_register_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryDarkColor">

        <androidx.cardview.widget.CardView
            android:id="@+id/auth_welcome_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_large"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryColor"
                tools:context=".auth.AuthRegisterNextStepFragment">

                <LinearLayout
                    android:id="@+id/auth_cardview_linearlayout"
                    style="@style/CardView.Dark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:id="@+id/auth_register_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/padding_medium"
                        android:gravity="center"
                        android:text="@string/register_new_account_step_2"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/text_size_large"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/auth_welcome_disclaimer_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/padding_medium"
                        android:gravity="center"
                        android:text="@string/register_step2_test_notification"
                        android:textColor="@color/secondaryTextColor"
                        android:textSize="16sp"
                        android:textStyle="italic" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_authority_type"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_medium_size"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/auth_register2_authority_type_dropdown"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:hint="@string/register_authority_type">

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:inputType="none"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_frag_register_button"
                        android:backgroundTint="@color/primaryDarkColor"
                        android:text="@string/register_text_next_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <ProgressBar
                android:id="@+id/auth_register_progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/purple_200"
                android:visibility="gone"
                tools:visibility="visible"
                android:fadeVisible="@{viewModel.showLoading.booleanValue()}"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>